# AlgoDSTraining_CMakeTemplate

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  solution.cpp
tests/: CMakeLists.txt  tests.cpp  tests.hpp
